--- a/src/containers/app.css
+++ b/src/containers/app.css
@@ -1,3 +1,149 @@
 .container {
-  /*App container styles belongs here*/
+  width: 100%;
+  min-height: 100vh;
+  background-image: url('../static/background.png');
+  object-fit: cover;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.search {
+  flex: 1;
+  width: 250px;
+  height: 40px;
+  display: block;
+  margin: auto;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 28px;
+  margin-bottom: 30px;
+  overflow: hidden;
+}
+
+.searchTextField {
+  width: 100%;
+  height: 100%;
+  border: 0px;
+  font-family: 'Sailec';
+  font-weight: 200;
+  opacity: 0.3;
+  text-align: center;
+  color: #8B8B8B;
+  font-size: 20px;
+  box-shadow: none;
+}
+
+.feed {
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: block;
+  margin: auto;
+  width: 500px;
+  min-height: 500px;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 28px;
+  padding: 30px;
+}
+
+.emptyFeed {
+  width: 100%;
+  height: 100%;
+  font-family: 'Sailec';
+  font-size: 25px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 45%;
+  opacity: 0.2;
+}
+
+.transaction {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+  width: 100%;
+  height: 100px;
+  background-color: white;
+  flex-wrap: nowrap;
+}
+
+.transactionEmotion {
+  flex: 1;
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+}
+
+.transactionTextWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: auto;
+  margin-left: 20px;
+  margin-right: 70px;
+}
+
+.transactionDescription {
+  font-family: 'Sailec';
+  font-size: 16px;
+  white-space: nowrap;
+  text-align: left;
+  width: 50px;
+  flex: 1;
+}
+
+.transactionNote {
+  font-family: 'Sailec';
+  font-size: 12px;
+  color: #8B8B8B;
+  white-space: nowrap;
+  width: 50px;
+  flex: 1;
+}
+
+.transactionCreated {
+  font-family: 'Sailec';
+  font-size: 12px;
+  text-align: right;
+  width: 100px;
+  flex: 2;
+}
+
+.transactionAmount {
+  font-family: 'Sailec';
+  font-size: 16px;
+  width: 50px;
+  text-align: right;
+  flex: 1;
+}
+
+.emotionPicker {
+  position: absolute;
+  top: 27px;
+  left: 25px;
+  width: auto;
+  background-color: #F3F3F3;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  height: 40px;
+  padding: 3px;
+  border-radius: 30px;
+}
+
+@font-face {
+    font-family: 'Sailec';
+    src: url('../static/sailec.ttf');
 }
